--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-md-4 col-lg-3 bg-secondary text-center">
-        <h3 class="mt-3">Selectionnez une action :</h3>
+        <h3 class="mt-3">Selectionnez une action:</h3>
         <div class="row">
             <div class="col">
                 <a href="{{ path('shop_new-shop')}}" class="btn btn-dark btn-block my-3">Créer un commerce</a>
@@ -29,7 +29,28 @@
     </div>
     <div class="col-md-8 col-lg-9 mb-5">
         <div class="container">
-            <h1 class="mt-4">Bienvenue {{ current_user.firstName }} sur votre espace de gestion !!!</h1>
+            <h1 class="mt-4">Bienvenue {{ current_user.firstName }} sur votre espace de gestion !!!</h1>      
+            <div class="row">
+                {% for shop in shopList %}
+                    <div class="col-lg-6 col-xl-4">
+                        <div class="card border border-dark mt-4 ml-5" style="width: 18rem;">
+                            <img class="card-img-top" src="/images/{{ shop.picture }}" alt="Photo du magasin" height="160" width="200">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ shop.nameShop }}</h5>
+                                <p class="card-text">{{ shop.presentation }}</p>
+                                <div class="row">
+                                    <div class="col">
+                                        <a href="#" class="btn btn-primary btn-block">Entrer</a> 
+                                    </div>
+                                    <div class="col">
+                                        <a href="#" class="btn btn-primary btn-block">Editer</a> 
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>      
         </div>
     </div>
 </div>
