--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -34,7 +34,8 @@
                 {% for shop in shopList %}
                     <div class="col-lg-6 col-xl-4">
                         <div class="card border border-dark mt-4 ml-5" style="width: 18rem;">
-                            <img class="card-img-top" src="/images/{{ shop.picture }}" alt="Photo du magasin" height="160" width="200">
+                            <img class="card-img-top" src="{{ shop.picture }}" alt="Photo du magasin" height="160" width="200">
+                    <!--    <img class="card-img-top" src="/images/{{ shop.picture }}" alt="Photo du magasin" height="160" width="200"> -->
                             <div class="card-body">
                                 <h5 class="card-title">{{ shop.nameShop }}</h5>
                                 <p class="card-text">{{ shop.presentation }}</p>
@@ -43,14 +44,17 @@
                                         <a href="#" class="btn btn-primary btn-block">Entrer</a> 
                                     </div>
                                     <div class="col">
-                                        <a href="#" class="btn btn-primary btn-block">Editer</a> 
+                                        <a href="{{ path('shop_edit-shop',{'id': shop.id}) }}" class="btn btn-primary btn-block">Editer</a> 
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 {% endfor %}
-            </div>      
+            </div> 
+            <div class="row justify-content-center mt-4">
+                {{ knp_pagination_render(shopList) }}
+            </div>     
         </div>
     </div>
 </div>
