factorisation cardShop + random shop page home

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,8 +5,8 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" type="image/png" href="/images/Click_Collect-Logo.png" />
         {% block stylesheets %}
-          <link rel="stylesheet" href="/style.css"></link>
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"></link>
+            <link rel="stylesheet" href="/css/style.css"></link>
             
         {% endblock %}
     </head>
