--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,30 +14,7 @@
     <div class="col-md-8 col-lg-9 mb-5">
         <div class="container">
             <h1 class="mt-4">Bienvenue sur MyClick&Collect !!!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi in voluptatibus sunt aliquam labore quasi facilis distinctio soluta similique nesciunt? Ullam officia suscipit repudiandae quidem unde fugit quod placeat vitae.
-            Earum optio dolore ullam, dolorem iure placeat hic quae magnam, impedit cupiditate in eius sint iste perferendis beatae culpa quia nobis maxime illum facere nemo officia aut asperiores quisquam? Non.
-            Aperiam nisi ullam temporibus facere excepturi fugiat molestias quam tenetur expedita, quod, officia a blanditiis quos voluptate? Aliquam magnam nam facere molestias asperiores, ipsa vel consequuntur odit fuga rerum neque.
-            Similique officia voluptatum sequi quasi deleniti recusandae repudiandae ab illo repellendus maxime. Atque et amet nihil animi. Ipsa aliquid consequuntur vero, voluptatem, laborum pariatur hic fugiat modi culpa, quam temporibus!
-            Nulla animi, explicabo quo quam minima dolor veritatis eligendi natus laboriosam expedita debitis doloribus accusantium amet. Itaque debitis, quis numquam sint corporis suscipit facilis labore harum, maiores officia adipisci eaque.
-            Maiores nostrum illo, illum distinctio laboriosam qui voluptatibus molestiae perferendis amet saepe eligendi eius a nisi fugiat blanditiis commodi nihil quam modi voluptas asperiores earum dolor. Beatae sunt soluta repudiandae?
-            Fuga quas, eos ab reprehenderit odit non dolor voluptates illo corrupti cupiditate eius dolores exercitationem provident, consequatur ex reiciendis, similique quasi omnis! Voluptate eaque nam quidem dolorem quod labore tempore.
-            Libero, ab! Distinctio quam corrupti exercitationem possimus laboriosam dicta ullam quisquam est suscipit consequatur deleniti, voluptas odit illo debitis, delectus reprehenderit iure blanditiis excepturi asperiores? Ex saepe optio id fuga.
-            Ipsam, id autem error debitis dolor similique sunt reiciendis ullam, molestias dignissimos accusantium velit fuga tempore enim a veniam quam ad maxime. Rem impedit illo suscipit id sunt sit. Ab?
-            Accusamus deserueatae amet ex dignissimos consequuntur impedit quidem deleniti praesentium at dicta reprehenderit. Dolorem quaerat quasi eius ab tenetur.
-            Explicabo cupiditate consectetur veniam impedit, excepturi minus a velit dicta rem iure adipisci, dignissimos ipsam hic sit omnis, beatae assumenda harum recusandae est porro odio nobis. Eius repudiandae inventore quo!
-            Quasi nisi eos, recusandae dolorum quas nesciunt corrupti rerum provident, amet iusto dolores magni cupiditate soluta quaerat ad blanditiis nulla nobis nemo maxime. Architecto voluptatum id et iusto rerum quia!
-            Doloribus obcaecati ducimus, at quisquam non eum nihil facere maxime veritatis, blanditiis ab reiciendis est quod voluptatem quaerat accusantium eligendi inventore explicabo nostrum repellat molestiae corrupti earum ut libero. Dolorum!
-            Minus accusantium tempore cum nemo optio dolor, quisquam quaerat architecto reprehenderit ipsam quasi quo error modi culpa praesentium itaque saepe eum eos quibusdam dolore quam amet facere! Neque, inventore non!</p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas aperiam asperiores nulla mollitia pariatur aliquid ipsum impedit. Magni, sit quaerat. Illum eum deserunt tenetur earum voluptatibus accusantium, dolor accusamus ad?
-            Molestiae, culpa impedit reprehenderit exercitationem ex pariatur deserunt iste beatae natus nisi provident nesciunt eligendi sit vel enim illum doloribus saepe quaerat, ipsa magni! Illum ipsum esse temporibus impedit praesentium.
-            Maxime, odio. Eligendi nesciunt nobis cupiditate. Modi sed at quia sint deserunt quisquam est alias illo, minus officiis suscipit dolorem facilis dicta deleniti inventore adipisci exercitationem non? Ad, libero rerum.
-            Minus voluptate est perspiciatis maiores reprehenderit minima adipisci iure maxime aliquam? Neque maxime odit impedit fuga maiores sed explicabo voluptatem dolorem, aperiam dolore repudiandae, atque autem quia deleniti quae animi.
-            Quaerat, quidem? Earum, praesentium qui! Fugit dolorum perferendis nulla voluptatibus labore sint praesentium dolorem molestiae quas consectetur maxime fuga velit, obcaecati animi, ratione ducimus nobis reiciendis ex voluptas voluptates ipsum.
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem eum facere laudantium magnam porro minus eveniet culpa beatae, earum odio consequuntur iste expedita necessitatibus ducimus rem perferendis. Eum, eos hic.
-            Numquam delectus, nihil dolore odit similique perferendis dicta natus id nisi doloribus architecto consequuntur optio rerum tenetur aliquam consectetur ipsum omnis ratione laborum quos corporis at aliquid odio? Totam, itaque?
-            Aspernatur eius pariatur maxime alias iste illum, fugiat, ipsam commodi ab nemo deserunt ut aliquid rerum recusandae? Fugiat, non debitis alias ut amet, ad beatae esse numquam inventore sit minima?
-            Molestias amet, nisi necessitatibus, minima, saepe praesentium reiciendis voluptate excepturi sit vero quam quaerat aut rem! Aut minima, officiis culpa praesentium rerum esse consectetur minus nobis delectus quam neque enim?
-            Beatae laudantium impedit velit? Nemo iure eum maxime repudiandae non dignissimos commodi, voluptate maiores ex dolor nisi magnam, voluptas tempore odit accusamus. Suscipit, a excepturi. Doloribus, quos. Vero, minus magni.
+            {% include 'shop/shopCardTemplate.html.twig' %}
         </div>
     </div>
 </div>
