--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
 <div class="row">
-    <div class="col-md-4 col-lg-3 bg-secondary">
-        <ul class="mt-4">
+    <div class="col-md-4 col-lg-3 bg-dark">
+        <ul class="mt-4 text-white">
           {% for category in categories %}
             <li>{{ category.nameCategory }}</li>
           {% endfor %}
