--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="{{ asset('css/style.css') }}"></link> 
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-info sticky-top">
             <a class="navbar-brand" href="{{ path('home') }}">MyClick&Collect</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
