--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="{{ asset('css/style.css') }}"></link> 
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-info sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-info">
             <a class="navbar-brand" href="{{ path('home') }}">MyClick&Collect</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -51,9 +51,16 @@
               </ul>
             </div>
         </nav>
-        <div class="container-fluid">
-            {% block body %}{% endblock %}
+        <div class="container-fluid vh-100">
+            <div class="vh-100">
+              {% block body %}{% endblock %}
+            </div>
+            
+            <div class="m-4">
+              <p style="visibility: hidden;">© 2020 Copyright: Vandevraye Grégory</p>
+            </div>
         </div>
+        
             <footer class="font-small bg-dark fixed-bottom">
 
                 <!-- Copyright -->
