--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}MyClick&Collect{% endblock %}
 
 {% block body %}
-<div class="row">
+<div class="row vh-100">
     <div class="col-md-4 col-lg-3 bg-dark">
       <div class="container mt-3 border-bottom border-info">
         <div class="text-white">
@@ -13,6 +13,7 @@
           {{ form_start(formSearchTown)}}
           {{ form_row(formSearchTown.nameTownSearch)}}
           {{ form_row(formSearchTown.zipCodeSearch)}}
+          <button class="btn btn-primary mb-3">Rechercher</button>
           {{ form_end(formSearchTown)}}
         </div>
       </div>
