--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -4,18 +4,18 @@
 
 {% block body %}
 
-<div class="row">
-    <div class="col-md-4 col-lg-3 bg-secondary text-center">
+<div class="row vh-100">
+    <div class="col-md-4 col-lg-3 bg-dark text-center text-white">
         <h3 class="mt-3">Selectionnez une action:</h3>
         <div class="row">
             <div class="col">
-                <a href="{{ path('shop_new-shop')}}" class="btn btn-dark btn-block my-3">Créer un commerce</a>
+                <a href="{{ path('shop_new-shop')}}" class="btn btn-primary btn-block my-3">Créer un commerce</a>
             </div>
         </div>
         <div class="row">
             <div class="col">
                 <div class="dropdown">
-                    <a role="button" class="btn btn-dark btn-block mb-3 dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a role="button" class="btn btn-primary btn-block mb-3 dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Editer un commerce
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
