--- a/templates/admin/listcategories.html.twig
+++ b/templates/admin/listcategories.html.twig
@@ -2,48 +2,52 @@
 
 {% block title %}Gestion des catégories{% endblock %}
 
-{% block body %}
-<div class="container p-3">
-    <h1>Gestion des catégories</h1>
-    <div class="row mt-4 justify-content-center">
-        <div class="btn btn-primary btn-lg col-md-5 mx-3 my-3">
-        <a href="{{  path('admin_home') }}" class="text-light align-self-center">Retour à l'accueil de l'administration</a>
-        </div>
-        <div class="btn btn-primary btn-lg col-md-5 mx-3 my-3">
-            <a href="{{ path('admin_listuser') }}" class="text-light align-self-center">Gérer les rôles utilisateurs</a>
+{% block sidebar %}
+    <h3 class="text-white">Selectionnez une action:</h3>
+    <div class="row">
+        <div class="col">
+            <a href="{{  path('admin_home') }}" class="btn btn-primary btn-block my-3">Retour à l'accueil de l'administration</a>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-7">
-            <div class="table-responsive">
-                <table class="table">
-                    <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">Liste des catégories</th>
-                        <th scope="col" colspan="2">Actions</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                        {% for category in categories %}
-                            <tr>
-                                <td>{{ category.nameCategory }}</td> 
-                                <td><a href="{{ path('admin_editcategory',{'id':category.id})}}" class="btn btn-warning">Modifier</a></td>
-                                <td><a href="{{ path('admin_deletecategory',{'id':category.id})}}" class="btn btn-danger">Supprimer</a></td>
-                            </tr>
-                        {% endfor %}     
-                    </tbody>
-                </table>
-            </div>  
+    <div class="row border-bottom border-info">
+        <div class="col">
+            <a href="{{ path('admin_listuser') }}" class="btn btn-primary btn-block mb-3">Gérer les rôles utilisateurs</a>
         </div>
-        <div class="col-md-4">
-            <h3>Ajouter une catégorie</h3>
-            <div class="mt-3">
-                {{ form_start(categoryForm) }}
-                {{ form_row(categoryForm.nameCategory) }}
-                <button class="btn btn-primary">Ajouter</button>
-                {{ form_end(categoryForm) }}
-            </div>
+    </div>
+{% endblock %}
+
+{% block main %}
+<h1 class="mt-4">Gestion des catégories</h1>
+<div class="row">
+    <div class="col-md-7">
+        <div class="table-responsive">
+            <table class="table">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Liste des catégories</th>
+                    <th scope="col" colspan="2">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                    {% for category in categories %}
+                        <tr>
+                            <td>{{ category.nameCategory }}</td> 
+                            <td><a href="{{ path('admin_editcategory',{'id':category.id})}}" class="btn btn-warning">Modifier</a></td>
+                            <td><a href="{{ path('admin_deletecategory',{'id':category.id})}}" class="btn btn-danger">Supprimer</a></td>
+                        </tr>
+                    {% endfor %}     
+                </tbody>
+            </table>
+        </div>  
+    </div>
+    <div class="col-md-4">
+        <h3>Ajouter une catégorie</h3>
+        <div class="mt-3">
+            {{ form_start(categoryForm) }}
+            {{ form_row(categoryForm.nameCategory) }}
+            <button class="btn btn-primary">Ajouter</button>
+            {{ form_end(categoryForm) }}
         </div>
-    </div> 
-</div>
+    </div>
+</div>      
 {% endblock %}
