--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -53,7 +53,20 @@
         </nav>
         <div class="container-fluid vh-100">
             <div class="vh-100">
-              {% block body %}{% endblock %}
+              {% block body %}
+              <div class="row vh-100">
+                <div class="col-md-4 col-lg-3 bg-dark">
+                  <div class="container mt-3 ">
+                    {% block sidebar %}{% endblock %}
+                  </div>    
+                </div>
+                <div class="col-md-8 col-lg-9 mb-5">
+                    <div class="container">
+                        {% block main %}{% endblock %}
+                    </div>
+                </div>
+            </div>
+              {% endblock %}
             </div>
             
             <div class="m-4">
@@ -61,7 +74,7 @@
             </div>
         </div>
         
-            <footer class="font-small bg-dark fixed-bottom">
+            <footer class="font-small bg-dark fixed-bottom border-top border-info">
 
                 <!-- Copyright -->
                 <div class="text-center text-light py-3">© 2020 Copyright:
