--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,32 +2,25 @@
 
 {% block title %}MyClick&Collect{% endblock %}
 
-{% block body %}
-<div class="row vh-100">
-    <div class="col-md-4 col-lg-3 bg-dark">
-      <div class="container mt-3 border-bottom border-info">
-        <div class="text-white">
-          <p>Recherche une ville :</p>
-        </div>
-        <div>
-          {{ form_start(formSearchTown)}}
-          {{ form_row(formSearchTown.nameTownSearch)}}
-          {{ form_row(formSearchTown.zipCodeSearch)}}
-          <button class="btn btn-primary mb-3">Rechercher</button>
-          {{ form_end(formSearchTown)}}
-        </div>
-      </div>
-      <ul class="mt-4 text-white">
-        {% for category in categories %}
-          <li>{{ category.nameCategory }}</li>
-        {% endfor %}
-      </ul>     
-    </div>
-    <div class="col-md-8 col-lg-9 mb-5">
-        <div class="container">
-            <h1 class="mt-4">Bienvenue sur MyClick&Collect !!!</h1>
-            {% include 'shop/shopCardTemplate.html.twig' %}
-        </div>
-    </div>
-</div>
+{% block sidebar %}
+  <div class="text-white">
+    <p>Recherche une ville :</p>
+  </div>
+  <div class="border-bottom border-info">
+    {{ form_start(formSearchTown)}}
+    {{ form_row(formSearchTown.nameTownSearch)}}
+    {{ form_row(formSearchTown.zipCodeSearch)}}
+    <button class="btn btn-primary mb-3">Rechercher</button>
+    {{ form_end(formSearchTown)}}
+  </div>
+  <ul class="mt-4 text-white">
+    {% for category in categories %}
+      <li>{{ category.nameCategory }}</li>
+    {% endfor %}
+  </ul> 
+{% endblock %}
+
+{% block main %}
+  <h1 class="mt-4">Bienvenue sur MyClick&Collect !!!</h1>
+  {% include 'shop/shopCardTemplate.html.twig' %}
 {% endblock %}
