add pagintion product in pagination subCategories

--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -27,6 +27,6 @@
 
 {% block main %}
     <h1 class="mt-4">Bienvenue {{ current_user.firstName }} sur votre espace de gestion !!!</h1> 
-    {% include 'shop/shopCardTemplate.html.twig' %}
+    {% include 'shop/layout/shopCardTemplate.html.twig' %}
 {% endblock %}
 
