--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,12 +37,12 @@
                   {% for role in app.user.roles %}
                     {% if (role == 'ROLE_ADMIN' and current_menu is defined and current_menu != 'admin') %}
                       <li class="nav-item ml-3">
-                        <a class="nav-link btn btn-dark text-white" href="{{ path('admin_home') }}">Espace administration</a>
+                        <a class="nav-link btn btn-primary text-white" href="{{ path('admin_home') }}">Espace administration</a>
                       </li>
                     {% endif %}
                     {% if (role == 'ROLE_TRADER' and current_menu is defined and current_menu != 'shop') %}
                       <li class="nav-item ml-3">
-                        <a class="nav-link btn btn-dark text-white" href="{{ path('shop_admin') }}">Espace gestion magasins</a>
+                        <a class="nav-link btn btn-primary text-white" href="{{ path('shop_admin') }}">Espace gestion magasins</a>
                       </li>
                     {% endif %}
                   {% endfor %}
