--- a/templates/shop/manage-shop.html.twig
+++ b/templates/shop/manage-shop.html.twig
@@ -21,41 +21,5 @@
 
 {% block main %}
     <h1 class="mt-4">Gestionnaire du magasin {{ current_shop.nameShop }}</h1> 
-    <div class="card text-center mt-3">
-        <div class="card-header">
-            <ul class="nav nav-tabs card-header-tabs">
-                {% for subcategory in sub_categories %}
-                    <li class="nav-item" onclick="afficher('div.target{{ loop.index }}')">
-                    <P class="nav-link active" aria-current="true" href="#">{{ subcategory.nameSubCategory }}</P>
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
-        {% for subcategory in sub_categories %}
-        
-        
-        <div class="card-body {{ loop.index == 1 ?'':'d-none' }} target{{ loop.index }}">
-            {% for product in products %}
-        {% if (product.subCategory.id == subcategory.id) %}
-        <h5 class="card-title">{{ subcategory.nameSubCategory }}</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-        {% endif %}
-        {% endfor %}
-        </div>
-        
-        
-        {% endfor %}
-
-    </div>
-{% endblock %}
-
-{% block javascripts %}
-    <script>
-
-            function afficher(element){
-                $('div.card-body:not(.d-none)').addClass('d-none')
-                $(element).removeClass('d-none')
-            }
-    </script>
+    {% include 'shop/layout/shopStructureTemplate.html.twig' %}
 {% endblock %}
