add display if not subcategories in shop

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,5 +22,5 @@
 
 {% block main %}
   <h1 class="mt-4">Bienvenue sur MyClick&Collect !!!</h1>
-  {% include 'shop/shopCardTemplate.html.twig' %}
+  {% include 'shop/layout/shopCardTemplate.html.twig' %}
 {% endblock %}
