--- a/templates/shop/layout/shopCardTemplate.html.twig
+++ b/templates/shop/layout/shopCardTemplate.html.twig
@@ -46,7 +46,7 @@
                         </div>
                         {% endif %}
                         <div class="col-12 mt-3">
-                            <a href="#" class="btn btn-dark btn-block">Entrer dans la boutique</a> 
+                            <a href="{{ path('enter-shop',{'id': shop.id}) }}" class="btn btn-dark btn-block">Entrer dans la boutique</a> 
                         </div>
                     </div>
                 </div>  
