--- a/templates/shop/manage-shop.html.twig
+++ b/templates/shop/manage-shop.html.twig
@@ -4,7 +4,7 @@
 <h3 class="text-white">Selectionnez une action:</h3>
     <div class="row">
         <div class="col">
-            <a href="#" class="btn btn-primary btn-block my-3">Gérer les catégories</a>
+            <a href="{{ path('shop_list-sub-categories',{'id': current_shop.id}) }}" class="btn btn-primary btn-block my-3">Gérer les catégories</a>
         </div>
     </div>
     <div class="row">
