--- a/templates/shop/editSubCategory.html.twig
+++ b/templates/shop/editSubCategory.html.twig
@@ -8,7 +8,7 @@
     <div class="mt-3">
         {{ form_start(form_sub_category) }}
         {{ form_row(form_sub_category.nameSubCategory) }}
-        <button class="btn btn-primary">Valider</button>
+        <button class="btn btn-primary">Modifier</button>
         {{ form_end(form_sub_category) }}
     </div>
 </div>
